@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: %pluginName
 Bundle-SymbolicName: org.ucdetector;singleton:=true
-Bundle-Version: 1.7.1
+Bundle-Version: 1.7.2
 Bundle-Activator: org.ucdetector.UCDetectorPlugin
 Bundle-Vendor: %providerName
 Bundle-Localization: plugin
