@@ -9,7 +9,8 @@ Bugfixes:
 
 
 Todo:
- - [3191417] Change to "protected" should be default
+ - [ 3200043 ] Bad marker "test only" for classes used in xml file
+ - [ 3191417 ] Change to "protected" should be default
 
 // -----------------------------------------------------------------------------
 UCDetector 1.7.0 from 2011-02-04 - eclipse 3.5, 3.6, 3.7:
